[gd_scene load_steps=8 format=2]

[ext_resource path="res://logic/Ball.gd" type="Script" id=1]
[ext_resource path="res://sprites/light.png" type="Texture" id=2]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/wall_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/launch.wav" type="AudioStream" id=5]
[ext_resource path="res://logic/BallMetaInfo/Square_BallMeta.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 100.0

[node name="Ball" type="RigidBody2D"]
light_mask = 4
position = Vector2( 360, 1064 )
collision_mask = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 100
contact_monitor = true
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )
speed = 1000

[node name="CollisionThing2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, -8, 8, 8, -8, 8, -8, -8 )

[node name="Timer" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 1.75
color = Color( 0.784314, 0.784314, 0.784314, 1 )
energy = 0.5
shadow_enabled = true

[node name="BrickHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="WallHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="LaunchAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -8, 8, 8, 8, 8, -8, -8, -8 )

[node name="MetaNode" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
